# sic

./: Cargo.toml  README.md  justfile
man/man1/: sic.1
scripts/: install-curl.sh  install-eget.sh  package-deps.json
src/: cli.rs  dep_constraint.rs  doctor.rs  failure.rs  fetch.rs  lib.rs  main.rs  manifest.rs  package_name.rs  prefix.rs  resolver.rs  source.rs  stage.rs  system_packages.rs  term.rs  transaction.rs  version.rs
src/storage/: cache.rs  installed.rs  lockfile.rs  mod.rs
tests/: cli_integration.rs  failure_serialization.rs  manifest_parse.rs  prefix_layout.rs  smoke.rs
