[package]
name = "sic"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Userland package manager for ~/.local"
license = "GPL-3.0"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
uuid = { version = "1.10", features = ["v4"] }
sha2 = "0.10"
fs2 = "0.4"
tar = "0.4"
flate2 = "1.0"
tempfile = "3"
owo-colors = "4"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
flate2 = "1.0"
tar = "0.4"
sha2 = "0.10"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
